tests/machine/x/lua/group_by_multi_join_sort.error
line 241: run error: exit status 1
lua: ...e/mochi/tests/machine/x/lua/group_by_multi_join_sort.lua:241: invalid value (table) at index 1 in table for 'concat'
stack traceback:
	[C]: in function 'table.concat'
	...e/mochi/tests/machine/x/lua/group_by_multi_join_sort.lua:241: in main chunk
	[C]: in ?

